updated build and work with api GW

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -28,6 +28,9 @@
             <li>
               <a routerLink="/dashboard" routerLinkActive="active"> Item Editor </a>
             </li>
+             <li>
+              <a routerLink="/dashboard" routerLinkActive="active"> Item Editor </a>
+            </li>
           </ul>
         </li>
       </ul>
