Added client UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,22 @@
     <div class="app" id="app">
         <app-header></app-header>
         <app-nav></app-nav>
-        <article class="content">
+        <article class="content" style="padding: 70px 10px 85px 20px;">
             <router-outlet></router-outlet>
         </article>
         <footer class="footer">
             <div class="footer-block buttons">
-                <iframe class="footer-github-btn" src="https://ghbtns.com/github-btn.html?user=modularcode&repo=modular-admin-html&type=star&count=true"
-                    frameborder="0" scrolling="0" width="140px" height="20px"></iframe>
+                
             </div>
             <div class="footer-block author">
                 <ul>
-                    <li> created by
+               <!--     <li> created by
                         <a href="https://github.com/modularcode">ModularCode</a>
                     </li>
                     <li>
                         <a href="https://github.com/modularcode/modular-admin-html#get-in-touch">get in touch</a>
                     </li>
+                    -->
                 </ul>
             </div>
         </footer>
