--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,9 +16,13 @@
           <a routerLink="/dashboard" routerLinkActive="active">
            <i class="fa fa-home"></i> Dashboard </a>
         </li>
-        <li class="active">
+        <li>
+          <a routerLink="/client" routerLinkActive="active">
+           <i class="fa fa-home"></i> Manage Clients </a>
+        </li>
+       <!-- <li class="active">
           <a href="">
-          <i class="fa fa-th-large"></i> Items Manager
+          <i class="fa fa-th-large"></i> test Sub menu
           <i class="fa arrow"></i>
           </a>
           <ul class="sidebar-nav">
@@ -32,7 +36,7 @@
               <a routerLink="/dashboard" routerLinkActive="active"> Item Editor </a>
             </li>
           </ul>
-        </li>
+        </li>-->
       </ul>
     </nav>
   </div>
