--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,11 @@
-<header class="header">
+<header class="header" style="height:40px;">
   <div class="header-block header-block-collapse d-lg-none d-xl-none">
     <button class="collapse-btn" id="sidebar-collapse-btn">
                             <i class="fa fa-bars"></i>
                         </button>
   </div>
   <div class="header-block header-block-search">
-    <form role="search">
-      <div class="input-container">
-        <i class="fa fa-search"></i>
-        <input type="search" placeholder="Search">
-        <div class="underline"></div>
-      </div>
-    </form>
+    
   </div>
   <div class="header-block header-block-nav">
     <ul class="nav-profile">
