--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -2,6 +2,9 @@
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
 </div>
+<div class="alert alert-success" role="alert" *ngIf="success">
+  Successfully Saved
+</div>
 <div class="row">
   <div class="col-md-4">
     <div class="card">
@@ -25,19 +28,30 @@
   <div class="col-md-8">
     <div class="card">
       <div class="card-body">
-        <form (ngSubmit)="submit()" name="clientForm">
+        <form (ngSubmit)="submit()" name="clientForm" ngNativeValidate>
           <div class="form-group">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-md-8">
                 <label for="name">Name *</label>
                 <input type="text" class="form-control underlined" name="name" id="name" required="true" [(ngModel)]="client.name" />
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-4">
+                <label for="active">Status *</label>
+                <select id="active" name="active " class="form-control underlined" required="true" [(ngModel)]="client.active">
+                  <option value="true" selected>Active </option>
+                  <option value="false">InActive </option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-6">
                 <label for="phonePrimary">Primary Phone *</label>
                 <input type="text" class="form-control underlined" name="phonePrimary" id="phonePrimary" required="true" [(ngModel)]="client.phonePrimary"
                 />
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-6">
                 <label for="email">Primary Email *</label>
                 <input type="text" class="form-control underlined" name="email" id="email" required="true" [(ngModel)]="client.email" />
               </div>
@@ -45,46 +59,54 @@
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-md-6">
                 <label for="name">Secondary Phone</label>
                 <input type="text" class="form-control underlined" name="phoneSecondary" id="phoneSecondary" required="false" [(ngModel)]="client.phoneSecondary"
                 />
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-6">
                 <label for="faxNo">Fax</label>
                 <input type="text" class="form-control underlined" name="faxNo" id="faxNo" required="false" [(ngModel)]="client.faxNo" />
-              </div>
-              <div class="col-sm-4">
-                <label for="pan">PAN *</label>
-                <input type="text" class="form-control underlined" name="pan" id="pan" required="true" [(ngModel)]="client.pan" />
               </div>
             </div>
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-md-6">
+                <label for="pan">PAN *</label>
+                <input type="text" class="form-control underlined" name="pan" id="pan" required="true" [(ngModel)]="client.pan" />
+              </div>
+              <div class="col-md-6">
+                <label for="gstin">GSTIN *</label>
+                <input type="text" class="form-control underlined" name="gstin" id="gstin" required="true" [(ngModel)]="client.gstin" />
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-6">
                 <label for="addrLine1">Address line 1 *</label>
                 <input type="text" class="form-control underlined" name="addrLine1" id="addrLine1" required="true" [(ngModel)]="client.addrLine1"
                 />
               </div>
-              <div class="col-sm-6">
-                <label for="addrLine2">Address line 2 *</label>
-                <input type="text" class="form-control underlined" name="addrLine2" id="addrLine2" required="true" [(ngModel)]="client.addrLine2"
+              <div class="col-md-6">
+                <label for="addrLine2">Address line 2 </label>
+                <input type="text" class="form-control underlined" name="addrLine2" id="addrLine2" required="false" [(ngModel)]="client.addrLine2"
                 />
               </div>
             </div>
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <label for="city">City *</label>
                 <input type="text" class="form-control underlined" name="city" id="city" required="true" [(ngModel)]="client.city" />
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <label for="state">State *</label>
                 <input type="text" class="form-control underlined" name="state" id="state" required="true" [(ngModel)]="client.state" />
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <label for="pinCode">PinCode *</label>
                 <input type="text" class="form-control underlined" name="pinCode" id="pinCode" required="true" [(ngModel)]="client.pinCode"
                 />
@@ -93,62 +115,74 @@
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-sm-4">
-                <label for="gstin">gstin *</label>
-                <input type="text" class="form-control underlined" name="gstin" id="gstin" required="true" [(ngModel)]="client.gstin" />
-              </div>
-              <div class="col-sm-4">
-                <label for="ServiceTaxRegNo">ServiceTaxRegNo *</label>
-                <input type="text" class="form-control underlined" name="ServiceTaxRegNo" id="ServiceTaxRegNo" required="true" [(ngModel)]="client.serviceTaxRegNo"
+              <div class="col-md-6">
+                <label for="ServiceTaxRegNo">Service Tax Reg No</label>
+                <input type="text" class="form-control underlined" name="ServiceTaxRegNo" id="ServiceTaxRegNo" required="false" [(ngModel)]="client.serviceTaxRegNo"
                 />
               </div>
-              <div class="col-sm-4">
-                <label for="accountingType">accountingType *</label>
-                <input type="text" class="form-control underlined" name="accountingType" id="accountingType" required="true" [(ngModel)]="client.accountingType"
+              <div class="col-md-6">
+                <label for="accountingType">Accounting Type </label>
+                <input type="text" class="form-control underlined" name="accountingType" id="accountingType" required="false" [(ngModel)]="client.accountingType"
                 />
               </div>
             </div>
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-md-6">
                 <label for="bankName">Bank Name *</label>
                 <input type="text" class="form-control underlined" name="bankName" id="bankName" required="true" [(ngModel)]="client.bankName"
                 />
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-6">
                 <label for="bankAcctNumber">Bank Account Number *</label>
                 <input type="text" class="form-control underlined" name="bankAcctNumber" id="bankAcctNumber" required="true" [(ngModel)]="client.bankAcctNumber"
                 />
               </div>
-              <div class="col-sm-4">
+
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-6">
+                <label for="bankBranch">Bank Branch Name *</label>
+                <input type="text" class="form-control underlined" name="bankBranch" id="bankBranch" required="true" [(ngModel)]="client.bankBranch"
+                />
+              </div>
+              <div class="col-md-6">
                 <label for="ifscCode">IFSC Code *</label>
                 <input type="text" class="form-control underlined" name="ifscCode" id="ifscCode" required="true" [(ngModel)]="client.ifscCode"
+                />
+              </div>
+
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-6">
+                <label for="accountType">Bank Account Type </label>
+                <input type="text" class="form-control underlined" name="accountType" id="accountType" required="false" [(ngModel)]="client.accountType"
+                />
+              </div>
+              <div class="col-md-6">
+                <label for="swiftCode">Swift Code </label>
+                <input type="text" class="form-control underlined" name="swiftCode" id="swiftCode" required="false" [(ngModel)]="client.swiftCode"
                 />
               </div>
             </div>
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-sm-4">
-                <label for="bankBranch">Bank Branch Name *</label>
-                <input type="text" class="form-control underlined" name="bankBranch" id="bankBranch" required="true" [(ngModel)]="client.bankBranch"
-                />
+              <div class="col-sm-6">
+                <label for="logoImg">Logo</label>
+                <input type="file" name="file-logo" id="file-logo" (change)="changeListener($event)"/>
               </div>
-              <div class="col-sm-4">
-                <label for="accountType">Bank Account Type *</label>
-                <input type="text" class="form-control underlined" name="accountType" id="accountType" required="true" [(ngModel)]="client.accountType"
-                />
-              </div>
-              <div class="col-sm-4">
-                <label for="swiftCode">Swift Code *</label>
-                <input type="text" class="form-control underlined" name="swiftCode" id="swiftCode" required="true" [(ngModel)]="client.swiftCode"
-                />
+              <div class="col-sm-6">
+                <img height="75" id="logoImg" name="logoImg" src="{{client.logoImg}}"/>
               </div>
             </div>
           </div>
-          <button type="submit" class="btn btn-success">Save</button>
-          logoImg: string; signatureImg: string; companyId: Number; active: string;
+          <button type="submit" class="btn btn-success float-right">Save</button>
         </form>
       </div>
     </div>
