manage user components

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,7 +18,11 @@
         </li>
         <li>
           <a routerLink="/client" routerLinkActive="active">
-           <i class="fa fa-home"></i> Manage Clients </a>
+           <i class="fa fa-users"></i> Manage Clients </a>
+        </li>
+        <li>
+          <a routerLink="/users" routerLinkActive="active">
+           <i class="fa fa-user"></i> Manage Users </a>
         </li>
        <!-- <li class="active">
           <a href="">
