--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -10,7 +10,7 @@
     <div class="card">
       <div class="card-header" style="padding-left:5px;">
         <div class="input-group mb-3">
-          <input type="text" class="form-control underlined" placeholder="search" />
+          <input type="text" class="form-control underlined" placeholder="search" (input)="onSearchChange($event.target.value)"/>
           <div class="input-group-append">
             <button class="btn btn-primary" (click)="new()">
               <i class="fa fa-plus-square"></i> &nbsp;Add New</button>
@@ -19,7 +19,7 @@
       </div>
       <div style="overflow:auto;height:400px;background-color:white;">
         <ul class="list-group list-group-flush">
-          <li *ngFor="let client of clients" class="list-group-item" (click)="edit(client)" style="cursor: pointer;">
+          <li *ngFor="let client of filterClients" class="list-group-item" (click)="edit(client)" style="cursor: pointer;">
             {{client.name}}
             <span class="float-right">
               <i class="fa fa-arrow-right"></i>
