Added UI for invoice page

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,8 +17,12 @@
            <i class="fa fa-home"></i> Dashboard </a>
         </li>
         <li>
-          <a routerLink="/client" routerLinkActive="active">
-           <i class="fa fa-home"></i> Manage Clients </a>
+           <a routerLink="/client" routerLinkActive="active">
+           <i class="fa fa-group"></i> Manage Clients </a>
+        </li>
+        <li>
+           <a routerLink="/invoice/0" routerLinkActive="active">
+           <i class="fa fa-file-text"></i> Invoice </a>
         </li>
        <!-- <li class="active">
           <a href="">
